# bioinfo

./: .gitignore  README.md
blosum_lab/: pyproject.toml
blosum_lab/src/: config.py
blosum_lab/src/alignment/: clustering.py  identity.py
blosum_lab/src/analysis/: character_composition.py  pfam_distribution.py
blosum_lab/src/data/: __init__.py  amino_acids.py  data_import.py  models.py  pfam_blocks.py  stockholm_format.py
blosum_lab/src/matrix/: blosum.py  counting.py  visualisation.py
blosum_lab/src/pipeline/: blosum_pipeline.py  clustering_pipeline.py  computing_pipeline.py  database_initialisation_pipeline.py  identity_pipeline.py
blosum_lab/src/storage/: sqlite.py
blosum_lab/test/alignment/: clustering_test.py  identity_test.py
blosum_lab/test/data/: pfam_blocks_test.py
blosum_lab/test/matrix/: blosum_test.py  counting_test.py
