[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "blosum_lab"
version = "0.1.0"
dependencies = [
    "Bio>=1.8.1",
    "biopython>=1.86",
    "matplotlib>=3.8",
    "numpy>=2.4",
    "pandas>=3.0.0",
    "pytest>=9.0",
    "seaborn>=0.13",
    "tqdm>=4.67",
]

[tool.setuptools.packages.find]
where = ["src"]
